# AIP

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pythonanywhere_wsgi_template.py  railway.json  render.yaml  requirements.txt  run.py  start.sh  wsgi.py
backend/: aip_platform.db  auth.py  config.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py  security.py  utils.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/routers/: __init__.py  auth.py  events.py
backend/routers/: __init__.py  airtable.py  alerts.py  analytics.py  auth.py  cases.py  data_rooms.py  deal_rooms.py  evidence.py  investors.py  movements.py  playbooks.py  projects.py  verification.py  verifications.py
backend/services/: __init__.py  ai_service.py  blockchain.py
backend/static/: __next.__PAGE__.txt  __next._tree.txt  index.html  index.txt
backend/static/404/: index.html
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
backend/static/analytics/: __next._tree.txt  __next.analytics.__PAGE__.txt  index.html  index.txt
backend/static/data-rooms/: __next._head.txt  __next._tree.txt  __next.data-rooms.__PAGE__.txt  index.html  index.txt
backend/static/events/: __next._full.txt  (+3 more)
backend/tests/: conftest.py  test_main.py  test_sira.py
docs/: IMPLEMENTATION_PLAN.md
src/app/: layout.tsx  page.tsx
src/components/: Sidebar.tsx
src/context/: AuthContext.tsx
src/lib/: api.ts
(+47 files in other folders)
